# carreel

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  dependencies.py  main.py  models.py
app/api/: files.py  jobs.py  mobile.py  otomoto.py  router.py  sse.py  transcribe.py
app/ffmpeg/: commands.py  runner.py
app/pipeline/: __init__.py  base.py  orchestrator.py
app/pipeline/agents/: __init__.py  caption_generator.py  elevenlabs_transcriber.py  elevenlabs_voiceover.py  media_processor.py  video_assembler.py
app/pipeline/mocks/: __init__.py  mock_scriptwriter.py  mock_transcriber.py  mock_voiceover.py
app/services/: copywriter.py  event_bus.py  file_manager.py  job_store.py  mobile_scraper.py  otomoto_scraper.py  pipeline_runner.py
app/static/: app.js  comparator.html  i18n.js  index.html  style.css
