[project]
name = "carreel"
version = "0.1.0"
description = "AI-powered car dealer video reels generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "Pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "pillow-heif>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
